--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,8 +102,27 @@ footer {
     bottom: 0;
 }
 
+.visitor-form,
+input {
+    input {
+        text-align: center;
+        width: 300px;
+    }
+
+    ::placeholder {
+        text-align: center;
+    }
+
+    input:placeholder-shown {
+        text-align: left;
+    }
+}
+
 form {
-    margin-top: 20px;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    text-align: center;
 }
 
 input,
@@ -169,13 +188,17 @@ textarea {
     background-color: #c95b2d;
 }
 
-.why-history-explorer {
+.sub-section {
     background-color: #fff7e6;
     padding: 40px;
     border-radius: 12px;
     margin: 40px auto;
     max-width: 800px;
     text-align: center;
+}
+
+li {
+    text-align: left;
 }
 
 .testimonials {
@@ -214,12 +237,6 @@ textarea {
 .destination-card img:hover {
     transform: scale(1.05);
 }
-
-#highlights {
-    background-color: #fff7dd;
-}
-
-
 
 /* Slideshow specific image styling */
 #slideshow .mySlides .feature-image {
