--- a/templates/egypt.html
+++ b/templates/egypt.html
@@ -55,35 +55,35 @@
 
     <div class="slideshow-container">
 
-        <div class="mySlides fade">
+        <div class="mySlides swtich">
             <div class="numbertext">Image 1 of 5</div>
             <img src="{{ url_for('static', filename='images/camel.webp') }}" alt="Camel in Egypt"
                 class="feature-image">
             <div class="text">Camel in Egypt</div>
         </div>
 
-        <div class="mySlides fade">
+        <div class="mySlides switch">
             <div class="numbertext">Image 2 of 5</div>
             <img src="{{ url_for('static', filename='images/egypt_monument_1.webp') }}" alt="Monument 1 in Egypt"
                 class="feature-image">
             <div class="text">Monument in Egypt 1</div>
         </div>
 
-        <div class="mySlides fade">
+        <div class="mySlides switch">
             <div class="numbertext">Image 3 of 5</div>
             <img src="{{ url_for('static', filename='images/egypt_monument_2.webp') }}" alt="Monument 2 in Egypt"
                 class="feature-image">
             <div class="text">Monument in Egypt 2</div>
         </div>
 
-        <div class="mySlides fade">
+        <div class="mySlides switch">
             <div class="numbertext">Image 4 of 5</div>
             <img src="{{ url_for('static', filename='images/egypt_monument_3.webp') }}" alt="Monument 3 in Egypt"
                 class="feature-image">
             <div class="text">Monument in Egypt 3</div>
         </div>
 
-        <div class="mySlides fade">
+        <div class="mySlides switch">
             <div class="numbertext">Image 5 of 5</div>
             <img src="{{ url_for('static', filename='images/egypt.webp') }}" alt="Sphinx in Egypt"
                 class="feature-image">
