--- a/templates/machu_picchu.html
+++ b/templates/machu_picchu.html
@@ -42,35 +42,35 @@
 
     <div class="slideshow-container">
 
-        <div class="mySlides fade">
+        <div class="mySlides switch">
             <div class="numbertext">Image 1 of 5</div>
             <img src="{{ url_for('static', filename='images/traditional_inca_1.webp') }}" alt="Traditional Clothes 2"
                 class="feature-image">
             <div class="text">Traditional Clothes 1</div>
         </div>
 
-        <div class="mySlides fade">
+        <div class="mySlides switch">
             <div class="numbertext">Image 2 of 5</div>
             <img src="{{ url_for('static', filename='images/inca_statue_1.webp') }}" alt="Inca Statue 1"
                 class="feature-image">
             <div class="text">Inca Statue 1</div>
         </div>
 
-        <div class="mySlides fade">
+        <div class="mySlides switch">
             <div class="numbertext">Image 3 of 5</div>
             <img src="{{ url_for('static', filename='images/llama.webp') }}" alt="Llama in Peru"
                 class="feature-image">
             <div class="text">Llama in Peru</div>
         </div>
 
-        <div class="mySlides fade">
+        <div class="mySlides switch">
             <div class="numbertext">Image 4 of 5</div>
             <img src="{{ url_for('static', filename='images/inca_statue_2.webp') }}" alt="Inca Statue 2"
                 class="feature-image">
             <div class="text">Inca Statue 2</div>
         </div>
 
-        <div class="mySlides fade">
+        <div class="mySlides switch">
             <div class="numbertext">Image 5 of 5</div>
             <img src="{{ url_for('static', filename='images/traditional_inca_2.webp') }}" alt="Traditional Clothes 2"
                 class="feature-image">
