--- a/templates/mayans.html
+++ b/templates/mayans.html
@@ -33,35 +33,35 @@
 
     <div class="slideshow-container">
 
-        <div class="mySlides fade">
+        <div class="mySlides switch">
             <div class="numbertext">Image 1 of 5</div>
             <img src="{{ url_for('static', filename='images/mayan_iguana.webp') }}" alt="Mayan Iguana"
                 class="feature-image">
             <div class="text">Mayan Iguana</div>
         </div>
 
-        <div class="mySlides fade">
+        <div class="mySlides switch">
             <div class="numbertext">Image 2 of 5</div>
             <img src="{{ url_for('static', filename='images/mayan_carved_faces.webp') }}" alt="Mayan Carved Faces"
                 class="feature-image">
             <div class="text">Mayan Carved Faces</div>
         </div>
 
-        <div class="mySlides fade">
+        <div class="mySlides switch">
             <div class="numbertext">Image 3 of 5</div>
             <img src="{{ url_for('static', filename='images/mayan_monument.webp') }}" alt="Mayan Monument"
                 class="feature-image">
             <div class="text">Mayan Monument</div>
         </div>
 
-        <div class="mySlides fade">
+        <div class="mySlides switch">
             <div class="numbertext">Image 4 of 5</div>
             <img src="{{ url_for('static', filename='images/mayan_city.webp') }}" alt="Mayan City"
                 class="feature-image">
             <div class="text">Mayan City</div>
         </div>
 
-        <div class="mySlides fade">
+        <div class="mySlides switch">
             <div class="numbertext">Image 5 of 5</div>
             <img src="{{ url_for('static', filename='images/mayan_fire.webp') }}" alt="Mayan Fire"
                 class="feature-image">
