--- a/templates/egypt.html
+++ b/templates/egypt.html
@@ -55,7 +55,7 @@
 
     <div class="slideshow-container">
 
-        <div class="mySlides swtich">
+        <div class="mySlides switch">
             <div class="numbertext">Image 1 of 5</div>
             <img src="{{ url_for('static', filename='images/camel.webp') }}" alt="Camel in Egypt"
                 class="feature-image">
