--- a/templates/contact.html
+++ b/templates/contact.html
@@ -22,6 +22,11 @@
     <br>
     <span class="error-message" id="nameError"></span><br>
 
+    <label for="name">Email Address:</label><br>
+    <input type="email" id="mail" name="mail" required>
+    <br>
+    <span class="error-message" id="mailError"></span><br>
+
     <label for="message">Message:</label><br>
     <textarea id="message" name="message" rows="4" maxlength="500" required></textarea>
     <br>
