--- a/templates/egypt.html
+++ b/templates/egypt.html
@@ -18,6 +18,15 @@
 </section>
 
 <section class="sub-section">
+    <h2>Ancient Egypt 101 | National Geographic</h2>
+    <iframe width="560" height="315"
+        src="https://www.youtube.com/embed/hO1tzmi1V5g?si=UB7psVB07MNX8aeV?&autoplay=1&mute=1"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</section>
+
+<section class="sub-section">
     <h2>Ancient Egypt</h2>
     <p>Ancient Egyptians built iconic monuments such as pyramids, temples, and kept elaborate records—over 30 miles of
         ancient papyri reveal details about logistics during pyramid construction.</p>
@@ -57,8 +66,7 @@
 
         <div class="mySlides switch">
             <div class="numbertext">Image 1 of 5</div>
-            <img src="{{ url_for('static', filename='images/camel.webp') }}" alt="Camel in Egypt"
-                class="feature-image">
+            <img src="{{ url_for('static', filename='images/camel.webp') }}" alt="Camel in Egypt" class="feature-image">
             <div class="text">Camel in Egypt</div>
         </div>
 
