--- a/templates/home.html
+++ b/templates/home.html
@@ -42,7 +42,8 @@
 </section>
 
 <section class="sub-section" id="randomDestination">
-    <h2>Click the button to get your next <strong>RANDOM</strong> destination. Are you brave enough to follow through?</h2>
+    <h2>Click the button to get your next <strong>RANDOM</strong> destination. Are you brave enough to follow through?
+    </h2>
     <button class="btn btn-danger" id="startRandomDestination">Give me a suggestion!</button>
     <!--Destination result is populated using Javascript-->
     <p id="randomDestinationResult"></p>
@@ -61,7 +62,7 @@
         </div>
         <div>Tell us what are you looking for when you are planning a trip:</div>
         <div>
-        <input type="text" id="tripMotivation" placeholder="What are you looking for on your trips?" required>
+            <input type="text" id="tripMotivation" placeholder="What are you looking for on your trips?" required>
         </div>
         <button class="btn btn-success" type="submit">Send</button>
     </form>
