--- a/templates/machu_picchu.html
+++ b/templates/machu_picchu.html
@@ -17,6 +17,15 @@
 </section>
 
 <section class="sub-section">
+    <h2>The rise and fall of the Inca Empire - Gordon McEwan</h2>
+    <iframe width="560" height="315"
+        src="https://www.youtube.com/embed/UO5ktwPXsyM?si=skdrNuf83d8EXA5X?&autoplay=1&mute=1"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</section>
+
+<section class="sub-section">
     <h2>The Inca Civilization</h2>
     <p>The Incas built an empire stretching over 2,500 miles and left an architectural legacy—from stone-built citadels
         to terraced fields.</p>
@@ -58,8 +67,7 @@
 
         <div class="mySlides switch">
             <div class="numbertext">Image 3 of 5</div>
-            <img src="{{ url_for('static', filename='images/llama.webp') }}" alt="Llama in Peru"
-                class="feature-image">
+            <img src="{{ url_for('static', filename='images/llama.webp') }}" alt="Llama in Peru" class="feature-image">
             <div class="text">Llama in Peru</div>
         </div>
 
