--- a/templates/mayans.html
+++ b/templates/mayans.html
@@ -17,6 +17,15 @@
 </section>
 
 <section class="sub-section">
+    <h2>The Maya Civilization Explained in 11 Minutes</h2>
+    <iframe width="560" height="315"
+        src="https://www.youtube.com/embed/YW0rLAX3y-c?si=Ma0WXRE05zDOjnV4?&autoplay=1&mute=1"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</section>
+
+<section class="sub-section">
     <h2>Mayan Civilization Highlights</h2>
     <p>The Maya left behind majestic stone cities, astronomical observatories, and complex writings that still captivate
         archaeologists.</p>
