--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <div class="header-top">
+            <!-- Ensure logo and title are aligned together -->
             <div class="brand">
                 <a href="{{ url_for('home') }}">
                     <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="logo">
