--- a/templates/egypt.html
+++ b/templates/egypt.html
@@ -17,6 +17,7 @@
     </ul>
 </section>
 
+<!-- Educational video on autoplay and mute -->
 <section class="sub-section">
     <h2>Ancient Egypt 101 | National Geographic</h2>
     <iframe width="560" height="315"
@@ -59,6 +60,7 @@
     </ul>
 </section>
 
+<!-- Loop through 5 pictures, 3 seconds per image -->
 <section id="slideshow">
     <h2>Slideshow</h2>
 
