--- a/templates/mayans.html
+++ b/templates/mayans.html
@@ -16,6 +16,7 @@
     </ul>
 </section>
 
+<!-- Educational video on autoplay and mute -->
 <section class="sub-section">
     <h2>The Maya Civilization Explained in 11 Minutes</h2>
     <iframe width="560" height="315"
@@ -37,6 +38,7 @@
     </ul>
 </section>
 
+<!-- Loop through 5 pictures, 3 seconds per image -->
 <section id="slideshow">
     <h2>Slideshow</h2>
 
