--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,7 +56,7 @@ header {
 .brand {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 10px; /* space between logo and title */
 }
 
 .logo {
@@ -88,7 +88,6 @@ header {
 }
 
 .main-nav a:hover {
-    font-weight: bold;
     color: #E56E38;
 }
 
@@ -96,16 +95,6 @@ header {
     font-weight: bold;
     text-decoration: underline;
     color: #E56E38;
-}
-
-footer {
-    text-align: center;
-    color: #28444D;
-    font-style: italic;
-    font-size: small;
-    padding: 1rem;
-    position: relative;
-    bottom: 0;
 }
 
 .visitor-form,
